# minimalist-shell

./: .gitignore  CMakeLists.txt  README.md  builtins.c  builtins.h  interpret.c  interpret.h  main.c  run.c  run.h  stringlist.c  stringlist.h
src/: builtins.c  builtins.h  interpret.c  interpret.h  main.c  run.c  run.h  stringlist.h
